[package]
name = "filelist"
version = "0.1.0"
edition = "2024"
description = "List files in directory with their hashes."

[dependencies]
cached = "0.56.0"
clap = { version = "4.5", features = ["cargo"] }
crossterm = "0.29.0"
either = "1.15.0"
hex = "0.4.3"
path-clean = "1.0.1"
progress_bar = "1.4.0"
sha2 = "0.10.9"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2"
itertools = "0.14.0"
tempfile = "3.21.0"
