[package]
name = "filelist"
version = "0.2.0"
edition = "2024"
description = "List files in directory with their hashes."

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
crossterm = "0.29.0"
dashmap = "6.1.0"
either = "1.15.0"
getset = "0.1.6"
hex = "0.4.3"
indicatif = "0.18.4"
rayon = "1.11.0"
relative-path = "2.0.1"
sha2 = "0.10.9"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2"
itertools = "0.14.0"
tempfile = "3.21.0"
