[package]
name = "filelist"
version = "0.2.0"
edition = "2024"
description = "List files in directory with their hashes."
readme = "README.md"
repository = "https://github.com/Barni228/filelist"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["cargo"] }
crossterm = "0.29.0"
dashmap = "6.1.0"
either = "1.15.0"
getset = "0.1.6"
hex = "0.4.3"
ignore = "0.4.25"
indicatif = "0.18.4"
pathdiff = "0.2.3"
rayon = "1.12.0"
sha2 = "0.11.0"

[dev-dependencies]
assert_cmd = { version = "2.2.0", features = ["color"] }
itertools = "0.14.0"
tempfile = "3.21.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
